# Experiment

./: .gitignore  .pnp.cjs  Anchor.toml  README.md  package-lock.json  package.json
ecosystem-testing/: package-lock.json  package.json  tsconfig.json
ecosystem-testing/src/: cli.ts
ecosystem-testing/src/config/: constants.ts
ecosystem-testing/src/operations/: approveWithdrawal.ts  createEcosystem.ts  createTokenAccount.ts  debugAccounts.ts  depositEcosystem.ts  initialize.ts  manageApprovers.ts  withdrawalRequest.ts
ecosystem-testing/src/types/: index.ts
ecosystem-testing/src/utils/: connection.ts  helpers.ts  keypair.ts  pda.ts
idls/: spree_points.json
jupiter-cpi/cpi-swap-client/: Cargo.toml
jupiter-cpi/cpi-swap-client/src/: main.rs
jupiter-cpi/swap-execute-client/: Cargo.toml
jupiter-cpi/swap-execute-client/src/: main.rs
programs/mock-jupiter/: Cargo.toml
programs/mock-jupiter/src/: lib.rs
programs/token-deployer/: Cargo.toml
programs/token-deployer/src/: lib.rs
tests/: sp-integration.ts  token-deployer.ts  transfer-hook.ts
tests/genesis/: patch_usdc.py  usdc.json
token-deployer/: .gitignore  .pnp.cjs  Anchor.toml  package-lock.json  package.json
token-deployer/idls/: spree_points.json
token-deployer/programs/token-deployer/: Cargo.toml
token-deployer/programs/token-deployer/src/: lib.rs
token-deployer/tests/: token-deployer.ts
utils/: burn.ts  burn_whitelist.ts  constants.ts  executor.ts  freeze.ts  initialization.ts  mint.ts  mint_whitelist.ts  setup.ts  transfer.ts  utils.ts  whitelist.ts
(+13 files in other folders)
