[package]
name = "mock-jupiter"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "mock_jupiter"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []

[dependencies]
anchor-lang = { version = "0.31.0", default-features = true, features = [
  "init-if-needed",
  "event-cpi",
] }
anchor-spl = { version = "0.31.0", default-features = true }
solana-program = "2.2.1" 