[package]
name = "token-deployer"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "token_deployer"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-attribute-account = "0.31.1"
anchor-lang = { version = "0.31.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.0" }
spl-token-2022 = { version = "8.0.1", features = ["no-entrypoint"] }
spl-token-metadata-interface = "0.7.0"
spl-type-length-value = "0.8.0"